fix: fix iframe height issue on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 body,
 body > * {
     height: 100%;
+    overscroll-behavior-y: none;
 }
 
 .entry-content-grid {
